Fixes horizontal scroll issues on mobile and tablet resolutions
ref https://github.com/TryGhost/Ghost/issues/24501
On mobile resolutions, this fixes an issues that causes the member details column to take most of the available viewport width, which caused readability issues with the rest of the table's columns. On tablet resolutions, this fixes an issue that caused the columns to visually overlap when scrolling horizontally.

--- a/ghost/admin/app/styles/layouts/members.css
+++ b/ghost/admin/app/styles/layouts/members.css
@@ -5,6 +5,10 @@
     --member-import-table-border: var(--whitegrey-d1);
 }
 
+.view-container  {
+    overflow-x: hidden;
+}
+
 /* Members avatar
 /* ----------------------------------------- */
 .gh-member-gravatar {
@@ -364,6 +368,15 @@ p.gh-members-list-email {
     min-width: 120px;
 }
 
+@media (max-width: 440px) {
+    .gh-members-list-row .gh-list-data:first-child {
+        width: 160px;
+        min-width: 160px;
+        max-width: 160px;
+        overflow-x: hidden;
+    }
+}
+
 @media (max-width: 1100px) {
     .gh-members-chart-summary-data {
         font-size: 2.8rem;
@@ -381,11 +394,6 @@ p.gh-members-list-email {
     .gh-list-with-helpsection {
         margin-left: 0;
         margin-right: 0;
-    }
-
-    .gh-members-list-row .gh-list-data:first-child {
-        min-width: 280px;
-        overflow-x: hidden;
     }
 
     .gh-members-list-email,
